tweaks to comments

--- a/src/Q2_blank.ipynb
+++ b/src/Q2_blank.ipynb
@@ -345,7 +345,7 @@
     }
    ],
    "source": [
-    "#These can be given\n",
+    "#Lagrangian derivatives (no need to edit these)\n",
     "function D1L(q,q̇)\n",
     "    return ForwardDiff.gradient(dq->Lagrangian(dq,q̇),q)\n",
     "end\n",
@@ -1509,8 +1509,7 @@
     }
    ],
    "source": [
-    "#These can be given\n",
-    "#Overloading Lagrangian derivatives with new time-varying versions\n",
+    "#Overloading Lagrangian derivatives with new time-varying versions (no need to edit)\n",
     "\n",
     "function D1L(q,q̇,t)\n",
     "    return ForwardDiff.gradient(dq->Lagrangian(dq,q̇,t),q)\n",
@@ -2371,7 +2370,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.0",
+   "display_name": "Julia 1.6.3",
    "language": "julia",
    "name": "julia-1.6"
   },
@@ -2379,7 +2378,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.2"
+   "version": "1.6.3"
   }
  },
  "nbformat": 4,
