--- a/src/Q3_blank.ipynb
+++ b/src/Q3_blank.ipynb
@@ -83,7 +83,7 @@
    ],
    "source": [
     "#Some standard functions for dealing with rotation matrices and quaternions from the class notes\n",
-    "#These can be given\n",
+    "#(No need to edit these)\n",
     "\n",
     "function hat(ω)\n",
     "    return [0 -ω[3] ω[2];\n",
@@ -179,7 +179,7 @@
     "#Reference Solution\n",
     "\n",
     "function f(x,p,t)\n",
-    "    # don't worry about p and t, they are not used in this function \n",
+    "    # Don't worry about p and t, they are not used in this function. They're just for the DifferentialEquations.jl interface.\n",
     "    \n",
     "    #Unpack state vector\n",
     "    r = x[1:3]   # position in world frame \n",
@@ -1194,7 +1194,7 @@
    "id": "determined-cement",
    "metadata": {},
    "source": [
-    "## 3B: Legendre transformed dynamics (15 pts)"
+    "## 3B: Variational Integrator (15 pts)"
    ]
   },
   {
@@ -4892,7 +4892,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.0",
+   "display_name": "Julia 1.6.3",
    "language": "julia",
    "name": "julia-1.6"
   },
@@ -4900,7 +4900,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.2"
+   "version": "1.6.3"
   }
  },
  "nbformat": 4,
